<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_layout"
        android:weightSum="1">

        <!--<ImageView
            android:layout_width="89dp"
            android:layout_height="89dp"
            android:id="@+id/aboutIcon"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher" />-->
        <include
            android:layout_width="89dp"
            android:layout_height="89dp"
            android:layout_gravity="center_horizontal"
            layout="@layout/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_main"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="https://xash.su"
            android:id="@+id/textView9"
            android:autoText="false"
            android:autoLink="web"
	    android:layout_gravity="center_horizontal" />
	
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/version_string"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

	<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_links"
            android:id="@+id/textView6"
            android:autoText="false" />
	
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_authors"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:clickable="false"
            android:enabled="true"
            android:singleLine="false"
            android:password="false"
            android:longClickable="false"
            android:autoText="false"
            android:includeFontPadding="false"
            android:layout_gravity="fill"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/git_revisions"
            android:id="@+id/textView5"
            android:autoText="false"
            android:longClickable="false"
            android:password="false"
            android:enabled="true"
            android:clickable="false"
            android:singleLine="false"
            
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_copyright"
            android:singleLine="false"
            android:id="@+id/textView2"
            android:layout_weight="0.58" />
		<Button
			android:id="@+id/show_firstrun"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/firstrun"/>
		<Button
			android:id="@+id/button_about_ok"
			android:text="@string/ok"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			/>

    </LinearLayout>
</ScrollView>
