<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:id="@+id/layout_shortcut">

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/shortcut_button_save"
		android:id="@+id/shortcut_buttonOk"
		android:layout_alignParentRight="true"
		android:onClick="saveShortcut"
		android:layout_below="@+id/shortcut_pkgname"/>

	<EditText
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/shortcut_name"
		android:layout_below="@+id/shortcut_name_text"
		android:layout_alignParentRight="true"/>
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:id="@+id/shortcut_name_text"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/shortcut_name"
	/>

	<EditText
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/shortcut_cmdArgs"
		android:layout_below="@+id/shortcut_textView_args"
		android:layout_alignParentRight="true"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/cmd_args_text"
		android:id="@+id/shortcut_textView_args"
		android:layout_alignParentRight="true"
		android:layout_below="@+id/shortcut_name"/>

	<EditText
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/shortcut_gamedir"
		android:layout_below="@+id/shortcut_gamedir_text"
		android:layout_alignParentRight="true"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/gamedir"
		android:id="@+id/shortcut_gamedir_text"
		android:layout_below="@+id/shortcut_cmdArgs"
		android:layout_alignParentRight="true"/>


	<EditText
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/shortcut_pkgname"
		android:layout_below="@+id/shortcut_pkgname_text"
		android:layout_alignParentRight="true"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/pkgname"
		android:id="@+id/shortcut_pkgname_text"
		android:layout_below="@+id/shortcut_gamedir"
		android:layout_alignParentRight="true"/>

</RelativeLayout>

